# libantenna

./: .gitignore  .gitpod.yml  CMakeLists.txt  Doxyfile  README.md  antenna.c  antenna.h  build.sh  go.mod  libantenna.c  libantenna.h  main.c  main.cxxx  main.go  main.py  release.ps1
cmd/: ffdist.go  root.go
doc/: Doxyfile  flatdoc.css
doc/html/: dir_081f004b5e2c4589e9450219e4659d4d.html  dir_081f004b5e2c4589e9450219e4659d4d.js  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_1a50ce1478d2c3dbaf0c9375780d9285.html  dir_1a50ce1478d2c3dbaf0c9375780d9285.js  dir_261c62883dc45b6408c6b81bf20121a8.html  dir_261c62883dc45b6408c6b81bf20121a8.js  dir_2a0012109ef144d1b373020f879ca9e6.html  dir_2a0012109ef144d1b373020f879ca9e6.js  dir_3d69aac5b1760774c346d8600b3a069a.html  dir_3d69aac5b1760774c346d8600b3a069a.js  dir_4578e22693ebe29ed82369981bb6e296.html  dir_4578e22693ebe29ed82369981bb6e296.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6c9e92f9121aba69f77221fb37a0a4a1.html  dir_6c9e92f9121aba69f77221fb37a0a4a1.js  dir_7cfb891f3f5153062858f6381afe1411.html  dir_7cfb891f3f5153062858f6381afe1411.js  dir_8809205e8f47ca9ea8540c574f63b284.html  dir_8809205e8f47ca9ea8540c574f63b284.js  dir_948d8c37ba610bf15d6e85e8a949d7e3.html  dir_948d8c37ba610bf15d6e85e8a949d7e3.js  dir_a6167577cb88cbc5a02ecb95ecebe9d3.html  dir_a6167577cb88cbc5a02ecb95ecebe9d3.js  dir_ac381ed6b09d232cf5942265e5671cc1.html  dir_ac381ed6b09d232cf5942265e5671cc1.js  dir_ad6eb191df331e41b909ddcd90bc7909.html  dir_ad6eb191df331e41b909ddcd90bc7909.js  dir_bb8aafac96d674a4980c9b8ebfc5c28c.html  dir_bb8aafac96d674a4980c9b8ebfc5c28c.js  dir_c0e630db22d18d914fd0014024253168.html  dir_c3bb9b677ac32c1b4c2e7a8e910d6461.html  dir_c3bb9b677ac32c1b4c2e7a8e910d6461.js  dir_c449a3c958bd872db3398c90b3778c07.html  dir_c449a3c958bd872db3398c90b3778c07.js  (+26 more)
doc/html/d0/d41/: utility_8c.html  utility_8c.js  utility_8c_source.html
doc/html/d1/d3a/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html
doc/html/d1/dd1/: propagation_8c.html  propagation_8c.js  propagation_8c_source.html
doc/html/d3/d0e/: test_2build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  test_2build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  test_2build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html
doc/html/d3/d66/: _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html
doc/html/d3/dcc/: md__r_e_a_d_m_e.html
doc/html/d6/d3f/: libantenna_8h.html  libantenna_8h.js  libantenna_8h_source.html
doc/html/d8/d2f/: conversion_8c.html  conversion_8c.js  conversion_8c_source.html
doc/html/d8/db9/: test_8c.html  test_8c.js  test_8c_source.html
doc/html/d9/dd6/: _r_e_a_d_m_e_8md.html
doc/html/da/dd5/: md__c___users_hsyn__desktop__git_hub_libantenna__r_e_a_d_m_e.html
doc/html/db/d15/: test_2build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  test_2build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  test_2build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html
doc/html/dc/d1c/: md_libantenna__r_e_a_d_m_e.html
doc/html/dc/df4/: build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  build_2_c_make_files_23_820_821032501-_m_s_v_c__2_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html
release/: README.md  go.mod
src/: antenna.c  conversion.c  freq2wavelen.c  propagation.c  utility.c
test/: CMakeLists.txt  test.c  test1.c
(+3 files in other folders)
